integrated WebSocket with SockJS, configured broker and endpoint